@@ -4,6 +4,7 @@ X-editable changelog
 
 Version 1.4.4 wip
 ----------------------------
+[enh #183] move datepicker icon to center of button (vitalets)
 [enh] upgrade to select2 3.3.2 (vitalets)
 [enh #176] update to bootstrap 2.3.1 (vitalets)
 [bug #171] clear in date & datetime when showbuttons=false (vitalets)
